02_build_and_sign_image/build-and-sign-el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: el-build-and-sign
spec:
  host: el-build-and-sign.apps.ocp4.whatever.out-of-my-head.de
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-build-and-sign
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
